# Image-Optimizer

./: .editorconfig  .gitignore  CMakeLists.txt  LICENSE  README.md  com.github.gijsgoudzwaard.image-optimizer.yml  meson.build
.github/workflows/: pipelines.yml
data/: com.github.gijsgoudzwaard.image-optimizer.appdata.xml  com.github.gijsgoudzwaard.image-optimizer.appdata.xml.in  com.github.gijsgoudzwaard.image-optimizer.contract  com.github.gijsgoudzwaard.image-optimizer.desktop  com.github.gijsgoudzwaard.image-optimizer.desktop.in  com.github.gijsgoudzwaard.image-optimizer.gresource.xml  meson.build
debian/: changelog  control  copyright  rules
po/: POTFILES  aa.po  ab.po  ae.po  af.po  ak.po  am.po  an.po  ar.po  as.po  ast.po  av.po  ay.po  az.po  ba.po  be.po  bg.po  bh.po  bi.po  bm.po  bn.po  bo.po  br.po  bs.po  ca.po  ce.po  ch.po  ckb.po  co.po  com.github.gijsgoudzwaard.image-optimizer.pot  cr.po  cs.po  cu.po  cv.po  cy.po  da.po  de.po  dv.po  dz.po  ee.po  (+157 more)
po/extra/: POTFILES  aa.po  ab.po  ae.po  af.po  ak.po  am.po  an.po  ar.po  as.po  ast.po  av.po  ay.po  az.po  ba.po  be.po  bg.po  bh.po  bi.po  bm.po  bn.po  bo.po  br.po  bs.po  ca.po  ce.po  ch.po  ckb.po  co.po  cr.po  cs.po  cu.po  cv.po  cy.po  da.po  de.po  dv.po  dz.po  ee.po  el.po  (+157 more)
src/: Application.vala  MainWindow.vala
src/Constants/: Stylesheet.vala
src/Utils/: Image.vala  JpegOptim.vala  OptiPng.vala  Optimizer.vala  Utils.vala
src/Widgets/: List.vala  Toolbar.vala  UploadScreen.vala
